--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>眼健康CRM门店接口</title>
+  <title>眼健康管理系统门店接口</title>
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
@@ -18,7 +18,7 @@
 <script>
     window.$docsify = {
         repo: '#',
-        name: '眼健康CRM门店接口',
+        name: '眼健康管理系统门店接口',
         loadSidebar: true,
         subMaxLevel: 2,
         noEmoji: true,
